--- a/frontend/src/styles/forumtexte.scss
+++ b/frontend/src/styles/forumtexte.scss
@@ -32,6 +32,10 @@
         padding: 5px;
         box-shadow: 0px 0px 5px 0px #00000080;
     }
+    .lienTexte {
+        text-decoration: none;
+        color: black;
+    }
     .buttonSupprimer{
         color: white;
         background: red;
